--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -25,6 +25,8 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    globals:
+        ciudad_por_defecto: %cupon.ciudad_por_defecto%
 
 # Assetic Configuration
 assetic:
